syntax = "proto3";


package ambulance_chat;

//initialisation of service
service AmbulanceChatService {
  //initialisation of rpc method
  rpc sendMessage(stream ChatMessage) returns (stream ChatMessage) {}
}

message ChatMessage {
 string name = 1;
 string message = 2;
}
